# Flumotion-Transcoder

./: .gitignore  AUTHORS  COPYING  ChangeLog  HACKING  Makefile.am  NEWS  README  RELEASE  TODO  autogen.sh  configure.ac  env  env.in  flumotion-transcoder.spec.in
conf/: Makefile.am  flumotion-transcoder-test-alt.ini  flumotion-transcoder-test.ini  flumotion-transcoder.ini  flutterd.ini  template.xml  transcoder-admin.ini  transcoder-data.ini  transcoder-job.ini
conf/customers/: bigclient.ini  fluendo.ini
conf/managers/transcoder/: planet.xml
conf/redhat/: flumotion-transcoder-admin  flumotion-transcoder-admin.sysconfig  flumotion-transcoder-manager  flumotion-transcoder-manager.sysconfig  flumotion-transcoder-worker  flumotion-transcoder-worker.sysconfig
conf/transcoder/: diagnosis.conf  transcoder-admin.ini  transcoder-data.ini
conf/transcoder/customers/: fluendo.ini.template
data/: Makefile.am
doc/: Makefile.am  api.txt  design.odt  requirments-specifications.txt  specifications.odt  supported-format.ods
doc/examples/: transcoder-admin.ini  transcoder-data.ini
doc/examples/customers/: bigclient.ini  fluendo.ini
doc/examples/workers/: trans-worker.xml  transcoder.xml
doc/redhat/: flumotion-transcoder.init  flutterd.sysconfig
doc/rst/: index.rst
doc/rst/configuration/: admin-config.rst  encoder-config.rst  placeholders.rst
doc/rst/configuration/file-source/: customer-config.rst  target-config.rst  transcoder-config.rst
doc/rst/installation/: build.rst  installed.rst  nagios-config.rst  production.rst  uninstalled.rst
doc/rst/overview/: admin-features.rst  customer-features.rst  features.rst  future-features.rst
doc/rst/testing/: dependency-testing.rst  encoder-testing.rst  functional-testing.rst  media-sets.rst  release-testing.rst
doc/text/Configuration/: TargetConfig
doc/text/Configuration/FileSource/: CustomerConfig  TargetConfig
doc/text/Installation/: Build  Installed  Uninstalled
doc/wiki/: PublicFeaturesOverview
doc/wiki/Overview/: AdminFeatures  CustomerFeatures  FutureFeatures  PrivateFeatures  PublicFeatures
flumotion/: Makefile.am  __init__.py
flumotion/component/monitor/: Makefile.am  base.py  filemonitor.py  filemonitor.xml  filemonitor_admin_gtk.py  httpmonitor.glade  httpmonitor.py  httpmonitor_admin_gtk.py  resource.py  watcher.py
flumotion/component/transcoder/: Makefile.am  analyst.py  base.xml  basetargets.py  binmaker.py  compconsts.py  context.py  cuepointsfilesrc.py  disco2.py  filemonitor.glade  filemonitor.py  filemonitor.xml  filemonitor_admin_gtk.py  filetranscoder.glade  filetranscoder.py  filetranscoder.xml  filetranscoder_admin_gtk.py  gstutils.py  httpmonitor.py  httpmonitor_admin_gtk.py  job.py  reporter.py  targets.py  thumbsamplers.py  thumbsink.py  thumbsrc.py  thumbtargets.py  transcoder.py  transtargets.py  varsets.py  videosize.py  watcher.py
flumotion/project/: Makefile.am
flumotion/transcoder/: Makefile.am  config.py  constants.py  defer.py  enums.py  errors.py  eventsource.py  fileutils.py  i18n.py  inifile.py  job.py  jobconfig.py  jobreport.py  local.py  log.py  main.py  pipelinecrawler.py  process.py  properties.py  ringbuffer.py  substitution.py  trans.py  transcoder.py  transconfig.py  transreport.py  utils.py  virtualpath.py  waiters.py  watcher.py
flumotion/transcoder/admin/: Makefile.am  actionscheduler.py  admerrs.py  admin.py  adminconfig.py  adminconsts.py  adminelement.py  admintask.py  compprops.py  constants.py  diagnose.py  diagnostic.py  diagutils.py  document.py  enums.py  errors.py  eventsource.py  interfaces.py  janitor.py  jobprops.py  main.py  monbalancer.py  monitoring.py  monitoringtask.py  monitorprops.py  monprops.py  montask.py  notifier.py  notifysubs.py  scheduler.py  substitution.py  taskbalancer.py  taskmanager.py  transbalancer.py  transcoding.py  transprops.py  transtask.py  utils.py  virtualpath.py  waiters.py
flumotion/transcoder/admin/api/: Makefile.am  api.py  apiserver.py  config.py  gateway.py  interfaces.py  shared.py  types.py
flumotion/transcoder/admin/api/mediums/: Makefile.am  __init__.py  basemedium.py  config.py  customer.py  named.py  profile.py  scheduler.py  store.py  target.py  worker.py  workermedium.py  workerset.py
flumotion/transcoder/admin/context/: Makefile.am  activity.py  admin.py  admincontext.py  api.py  apicontext.py  base.py  config.py  customer.py  customercontext.py  manager.py  managercontext.py  notification.py  notifier.py  notifiercontext.py  profile.py  profilecontext.py  scheduler.py  state.py  store.py  target.py  targetcontext.py  transcontext.py  worker.py  workercontext.py
flumotion/transcoder/admin/contexts/: Makefile.am  admincontext.py  managercontext.py  workercontext.py
flumotion/transcoder/admin/datasource/: Makefile.am  dataprops.py  datasource.py  dummysource.py  filesource.py  sqlsource.py
flumotion/transcoder/admin/datastore/: Makefile.am  __init__.py  activity.py  activitystore.py  adminstore.py  base.py  basestore.py  config.py  configstore.py  customer.py  customerstore.py  notification.py  notificationstore.py  notifystore.py  profile.py  profilestore.py  reportsstore.py  state.py  store.py  target.py  targetstore.py
flumotion/transcoder/admin/property/: Makefile.am  base.py  filemon.py  filetrans.py
flumotion/transcoder/admin/proxies/: Makefile.am  atmosphereproxy.py  componentproxy.py  componentset.py  compprops.py  flowproxy.py  fluproxy.py  groupproxy.py  managerproxy.py  managerset.py  monitorproxy.py  monitorset.py  monprops.py  transcoderproxy.py  transcoderset.py  transprops.py  workerproxy.py  workerset.py
flumotion/transcoder/admin/proxy/: Makefile.am  __init__.py  atmosphere.py  base.py  component.py  componentset.py  flow.py  group.py  manager.py  managerset.py  monitor.py  monitorset.py  transcoder.py  transcoderset.py  worker.py  workerset.py
flumotion/transcoder/manager/: Makefile.am  plugs.py  plugs.xml
flumotion/transcoder/tools/: Makefile.am  oldconfig.py  qos.py  upgrade.py
misc/: Makefile.am  preamble.py  pycheckerhelp.py  pycheckerrc
src/: Makefile.am  (+1 more)
(+45 files in other folders)
