EXTRA_DIST = managers/transcoder/planet.xml \
             transcoder/transcoder-admin.ini \
             transcoder/transcoder-data.ini \
             transcoder/customers/fluendo.ini.template \
             redhat/flumotion-transcoder-admin \
             redhat/flumotion-transcoder-admin.sysconfig \
             redhat/flumotion-transcoder-manager \
             redhat/flumotion-transcoder-manager.sysconfig \
             redhat/flumotion-transcoder-worker \
             redhat/flumotion-transcoder-worker.sysconfig
