EXTRA_DIST = managers/transcoder/planet.xml \
             transcoder/transcoder-admin.ini \
             transcoder/transcoder-data.ini \
             transcoder/diagnosis.conf \
             transcoder/customers \
             redhat/flumotion-transcoder-admin \
             redhat/flumotion-transcoder-admin.sysconfig
