examplesdir = $(docdir)/examples
examples_DATA = examples/transcoder-admin.ini \
                examples/transcoder-data.ini

customersdir = $(docdir)/examples/customers
customers_DATA = examples/customers/fluendo.ini \
                 examples/customers/bigclient.ini
                 
workersdir = $(docdir)/examples/workers
workers_DATA = examples/workers/trans-worker.xml

EXTRA_DIST = requirments-specifications.txt \
             design.odt specifications.odt \
             examples/transcoder-admin.ini \
             examples/transcoder-data.ini \
             examples/customers/fluendo.ini \
             examples/customers/bigclient.ini \
             examples/workers/trans-worker.xml
