EXTRA_DIST = requirments-specifications.txt \
             design.odt specifications.odt \
             examples/transcoder-admin.ini \
             examples/transcoder-data.ini \
             examples/customers/fluendo.ini \
             examples/customers/bigclient.ini \
             examples/workers/transcoder.xml \
             text/Overview/CustomerFeatures \
             text/Overview/AdminFeatures \
             text/Overview/FutureFeatures \
             text/Installation/Build \
             text/Installation/Uninstalled \
             text/Installation/Installed \
             text/Configuration/AdminConfig \
             text/Configuration/FileSource/TranscoderConfig \
             text/Configuration/FileSource/CustomerConfig
