EXTRA_DIST = requirments-specifications.txt \
             design.odt specifications.odt \
             examples/transcoder-admin.ini \
             examples/transcoder-data.ini \
             examples/customers/fluendo.ini \
             examples/customers/bigclient.ini \
             examples/workers/transcoder.xml \
             rst/index.rst \
             rst/overview/features.rst \
             rst/overview/admin-features.rst \
             rst/overview/future-features.rst \
             rst/overview/customer-features.rst \
             rst/installation/uninstalled.rst \
             rst/installation/build.rst \
             rst/installation/installed.rst \
             rst/configuration/file-source \
             rst/configuration/file-source/customer-config.rst \
             rst/configuration/file-source/transcoder-config.rst \
             rst/configuration/admin-config.rst \
             rst/configuration/encoder-config.rst \
             rst/testing/encoders-testing.rst \
             rst/testing/media-sets.rst \
             rst/testing/dependencies-testing.rst \
             rst/testing/release-testing.rst \
             rst/testing/integration-testing.rst
